--- a/PR094-SlidingTabLayout/app/src/main/res/values/strings.xml
+++ b/PR094-SlidingTabLayout/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">PR094-SlidingTabLayout</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">SlidingTabLayout</string>
+    <string name="icono">Icono</string>
+    <string name="tab">Pantalla</string>
 
 </resources>
