--- a/PR095-DownloadManager/app/src/main/res/values/strings.xml
+++ b/PR095-DownloadManager/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">DownloadManager</string>
     <string name="action_settings">Settings</string>
     <string name="descargar">Descargar</string>
+    <string name="descargar_y_reproducir">Descargar y reproducir</string>
 
 </resources>
