--- a/PR107-Sunshine/app/src/main/res/values/strings.xml
+++ b/PR107-Sunshine/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_detalle">DetalleActivity</string>
+    <string name="localidad_en_el_mapa">Ver Localidad en el mapa</string>
 
 </resources>
