--- a/PR112-DragDropListViews/app/src/main/res/values/strings.xml
+++ b/PR112-DragDropListViews/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">DragAndDrop</string>
+    <string name="app_name">DragDropListViews</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="titulo">La ciudad</string>
 
 </resources>
