--- a/PR112-DragDropListViews/app/src/main/res/values/strings.xml
+++ b/PR112-DragDropListViews/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
 <resources>
 
     <string name="app_name">DragDropListViews</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="icono">Icono</string>
 
 </resources>
