--- a/PR119-Almacenamiento/app/src/main/res/values/strings.xml
+++ b/PR119-Almacenamiento/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
 <resources>
 
     <string name="app_name">PR119-Almacenamiento</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="interno">Interno</string>
+    <string name="externo_privado">Externo privado</string>
+    <string name="externo_publico">Externo público</string>
+    <string name="cache_interno">Caché interno</string>
+    <string name="cache_externo">Caché externo</string>
 
 </resources>
