--- a/PR027-SQLiteDAO/app/src/main/res/values/strings.xml
+++ b/PR027-SQLiteDAO/app/src/main/res/values/strings.xml
@@ -1,49 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Alumnado</string>
+    <string name="app_name">SQLiteDAO</string>
     <string name="sin_alumnado_agregue_un_alumno">No hay alumnos.\nPulse para agregar</string>
     <string name="nombre">Nombre</string>
-    <string name="alumno">Alumno</string>
     <string name="curso">Curso</string>
     <string name="telefono">Teléfono</string>
     <string name="direccion">Dirección</string>
-    <string name="BotonAddAlumno">Añadir Alumnos</string>
-    <string name="BotonCosulta">Consultar Alumnos</string>
-    <string name="bienvenida">Gestión de Alumnos</string>
     <string name="agregar_alumno">Agregar</string>
     <string name="editar_alumno">Actualizar</string>
-    <string name="ver_alumno">Ver</string>
     <string name="eliminar_alumno">Eliminar</string>
-    <string name="llamar_alumno">Llamar alumno</string>
-    <string name="mapa_alumno">Ver dirección en mapa</string>
-    <string name="consultar_alumno">Consultar alumno</string>
-    <string name="llamar">Llamar</string>
-    <string name="borrar_bd">Borrar Base de Datos</string>
-    <string name="id_cab">EXPEDIENTE: </string>
-    <string name="alumno_cab">ALUMNO: </string>
-    <string name="curso_cab">CURSO: </string>
-    <string name="telefono_cab">TELEFONO: </string>
-    <string name="direccion_cab">DIRECCION: </string>
     <string name="datos_obligatorios">No ha introducido datos obligatorios</string>
-    <string name="error_apertura_bd">Error al abrir la base de datos</string>
     <string name="insercion_correcta">El alumno se ha agregado correctamente</string>
     <string name="insercion_incorrecta">Se ha producido un error al agregar el alumno</string>
     <string name="actualizacion_correcta">El alumno se ha actualizado correctamente</string>
     <string name="actualizacion_incorrecta">Se ha producido un error al actualizar el alumno</string>
-    <string name="eliminacion_correcta">El alumno se ha eliminado correctamente</string>
-    <string name="eliminacion_incorrecta">Se ha producido un error al eliminar el alumno</string>
-    <string name="sin_alumnos">No existen datos de alumnos.</string>
     <string name="alumno_no_encontrado">No se ha encontrado el alumno en la base de datos.</string>
-    <string name="click_largo">Haga click largo sobre un elemento para ver las opciones disponibles</string>
-    <string name="confirmar_eliminar">¿Está seguro de que quiere eliminar el alumno?</string>
-    <string name="confirmar_eliminar_bd">¿Está seguro de que quiere eliminar la base de datos?</string>
     <string name="no">No</string>
     <string name="si">Sí</string>
     <string name="title_activity_alumno">AlumnoActivity</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="guardar">Guardar</string>
     <string name="esta_seguro_de_eliminar_los_alumnos">¿Está seguro de eliminar los alumnos?</string>
 
 </resources>
