--- a/PR118-SearchView/app/src/main/res/values/strings.xml
+++ b/PR118-SearchView/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="foto">Foto</string>
     <string name="buscar">Buscar</string>
     <string name="title_activity_busqueda">BusquedaActivity</string>
-    <string name="search_hint">(buscar)</string>
+    <string name="search_hint">(alumno)</string>
     <string name="limpiar_historial_busqueda">Limpiar historial de búsqueda</string>
 
 </resources>
