--- a/PR118-SearchView/app/src/main/res/values/strings.xml
+++ b/PR118-SearchView/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="app_name">SearchView</string>
     <string name="foto">Foto</string>
     <string name="buscar">Buscar</string>
-    <string name="title_activity_busqueda">BusquedaActivity</string>
-    <string name="search_hint">(alumno)</string>
+    <string name="title_activity_busqueda">Restultados de la búsqueda</string>
+    <string name="search_hint">Buscar alumno</string>
     <string name="limpiar_historial_busqueda">Limpiar historial de búsqueda</string>
 
 </resources>
