--- a/PR096-NotificationStyles/app/src/main/res/values/strings.xml
+++ b/PR096-NotificationStyles/app/src/main/res/values/strings.xml
@@ -2,23 +2,19 @@
 <resources>
 
     <string name="app_name">Notificaciones</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
     <string name="big_text_style">Big Text Style</string>
     <string name="big_picture_style">Big Picture Style</string>
     <string name="inbox_style">Inbox Style</string>
     <string name="progress_bar">Progress Bar</string>
-    <string name="progreso_indeterminado">Progreso indeterminado</string>
+    <string name="progreso_indeterminado">Indeterminado</string>
     <string name="operacion_finalizada">Operación finalizada</string>
     <string name="actualizacion_de_datos">Actualización de datos</string>
-    <string name="actualizando">Actualizando...</string>
+    <string name="actualizando">Actualizando…</string>
     <string name="de"> de </string>
     <string name="title_activity_resultado">ResultadoActivity</string>
-    <string name="enviar_texto">Enviar texto</string>
     <string name="enviar">Enviar</string>
     <string name="eliminar">Eliminar</string>
     <string name="ver">Ver</string>
-    <string name="desde_actividad_principal">Desde la actividad principal</string>
     <string name="content_title">Content Title</string>
     <string name="content_text">Content Text</string>
     <string name="content_info">Content Info</string>
@@ -27,5 +23,7 @@
     <string name="big_content_title">Big Content Title</string>
     <string name="summary_text">Summary Text</string>
     <string name="line">Line</string>
+    <string name="heads_up_notification">Heads-up</string>
+    <string name="responder">Responder</string>
 
 </resources>
