--- a/PR133-CardView/app/src/main/res/values/strings.xml
+++ b/PR133-CardView/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
-    <string name="app_name">PR133-CardView</string>
-
+    <string name="app_name">CardView</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="cuenta">Cuenta</string>
     <string name="Propina">Propina</string>
-    <string name="porcentaje">Porcentaje</string>
+    <string name="porcentaje"> % Prop.</string>
+    <string name="total">Total</string>
+    <string name="redondear">Redondear</string>
+    <string name="limpiar">Limpiar</string>
+    <string name="comensales">Comensales</string>
 </resources>
