--- a/PR133-CardView/app/src/main/res/values/strings.xml
+++ b/PR133-CardView/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="redondear">Redondear</string>
     <string name="limpiar">Limpiar</string>
     <string name="comensales">Comensales</string>
+    <string name="por_comensal">Por Comensal</string>
 </resources>
