--- a/PR133-CardView/app/src/main/res/values/strings.xml
+++ b/PR133-CardView/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="limpiar">Limpiar</string>
     <string name="comensales">Comensales</string>
     <string name="por_comensal">Por Comensal</string>
+    <string name="simbolo_porcentaje">%</string>
 </resources>
