--- a/PR136-Parallax/app/src/main/res/values/strings.xml
+++ b/PR136-Parallax/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Efecto Parallax</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing
         elit. Sed sapien lacus, posuere a augue vel, vehicula scelerisque
@@ -21,4 +20,5 @@ Proin blandit lacus sit amet tellus imperdiet, quis laoreet justo aliquet.
         Vestibulum tempor ac eros sed cursus. Vestibulum rutrum ex ut diam sagittis, id pretium lacus ullamcorper. Sed a nulla ut diam vestibulum gravida. Praesent et porttitor eros. Nullam facilisis lobortis lacus, id feugiat magna. Fusce cursus rutrum sapien, a sollicitudin mi fermentum sit amet. Aliquam sit amet porttitor mi. Nam a facilisis eros. Cras placerat eleifend libero nec commodo. Fusce hendrerit tempus velit, quis rhoncus sapien porta et. Integer id condimentum ante, in luctus justo. Nullam gravida lorem vitae justo imperdiet venenatis.
 
 Donec eu fermentum velit. Morbi est nisi, lobortis quis lobortis nec, elementum vulputate mauris. Nam efficitur lacus sem, nec malesuada ipsum pharetra vitae. Aliquam rhoncus fringilla orci, vel consequat est congue et. Cras felis ipsum, sollicitudin id venenatis eu, fermentum eu nisl. Nam id ex et lacus pharetra ullamcorper a sed justo. Aliquam eu tellus vitae felis egestas bibendum eget eu nulla. Quisque tempus, odio non pellentesque consectetur, urna dui viverra metus, eu sodales lorem mauris sed justo. Vivamus eleifend, nibh eget faucibus hendrerit, turpis ligula luctus nisi, eget efficitur enim nisl eget risus. Vestibulum quis hendrerit metus, sit amet volutpat neque. Nam euismod ipsum non massa sagittis, ac suscipit ipsum pellentesque.</string>
+    <string name="foto">Foto de cabecera</string>
 </resources>
