PR107 add ItemTouchHelper

--- a/PR106-RecyclerView/app/src/main/res/values/strings.xml
+++ b/PR106-RecyclerView/app/src/main/res/values/strings.xml
@@ -3,10 +3,7 @@
 
     <string name="app_name">RecyclerView</string>
     <string name="no_hay_alumnos">No hay alumnos</string>
-    <string name="bajar">Bajar</string>
     <string name="ha_pulsado_sobre">"Ha pulsado sobre "</string>
-    <string name="texto_panel">Alumnos de 2º CFGS DAM</string>
-    <string name="agregar_alumno">Agregar alumno</string>
-    <string name="foto_alumno">Foto del alumno</string>
+    <string name="avatar">Avatar</string>
 
 </resources>
