--- a/PR104-Toolbar/app/src/main/res/values/strings.xml
+++ b/PR104-Toolbar/app/src/main/res/values/strings.xml
@@ -2,10 +2,10 @@
 <resources>
 
     <string name="app_name">Toolbar</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Configuración</string>
     <string name="next">Next</string>
-    <string name="title_activity_secundary">Secundary Activity</string>
-    <string name="actividad_principal">Main Activity</string>
+    <string name="title_activity_secundary">Actividad secundaria</string>
+    <string name="actividad_principal">Actividad principal</string>
     <string name="actividad_secundaria">Actividad secundaria</string>
 
 </resources>
