PR147 fix activity title

--- a/PR147-TabLayout/app/src/main/res/values/strings.xml
+++ b/PR147-TabLayout/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AppBarLayout</string>
+    <string name="app_name">TabLayout</string>
     <string name="action_settings">Settings</string>
     <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi at lorem id velit imperdiet volutpat id eget odio. Nunc ut sodales turpis, id pretium felis. Cras at orci vel magna lacinia fringilla. Nulla tempus aliquam velit eget placerat. Aliquam vel justo ut eros tincidunt egestas a ac turpis. Etiam vitae velit id lorem egestas feugiat non ac ante. Proin in odio pulvinar, fermentum risus ac, ornare sapien. Aliquam efficitur nisl id tellus porta convallis. Nulla at pretium mauris, vitae dignissim ligula. In cursus magna est, ac posuere mauris ullamcorper ut. Pellentesque felis nunc, lacinia sit amet vestibulum eu, pretium eu justo. Aenean lectus lorem, tempor at sapien volutpat, dictum dapibus ipsum. Sed maximus fringilla diam lacinia interdum.
 
