Add constant to PR150

--- a/PR150-Percent/app/src/main/res/values/strings.xml
+++ b/PR150-Percent/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">Percent</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Percent support library</string>
     <string name="action_settings">Settings</string>
 </resources>
