--- a/PR125-AnimateLayout/app/src/main/res/values/strings.xml
+++ b/PR125-AnimateLayout/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
-    <string name="app_name">PR125-AnimateLayout</string>
-
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">AnimateLayout</string>
     <string name="agregar_elemento">Agregar elemento</string>
-    <string name="pulsa_para_eliminar">Pulsa para eliminar</string>
+    <string name="transicion_propia">Transición propia</string>
+    <string name="imagen">Imagen</string>
 </resources>
