--- a/PR126-beginDelayedTransition/app/src/main/res/values/strings.xml
+++ b/PR126-beginDelayedTransition/app/src/main/res/values/strings.xml
@@ -1,8 +1,5 @@
 <resources>
-    <string name="app_name">PR126-beginDelayedTransition</string>
-
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="pulsa_para_eliminar">Pulsa para eliminar</string>
+    <string name="app_name">beginDelayedTransition</string>
     <string name="agregar_elemento">Agregar elemento</string>
+    <string name="imagen">Imagen</string>
 </resources>
