--- a/PR128-OverridePendingTransition/app/src/main/res/values/strings.xml
+++ b/PR128-OverridePendingTransition/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">OverridePendingTransition</string>
-    <string name="soy_la_actividad_llamadora">Soy la Actividad llamadora.\nPulsa para ir a la otra actividad</string>
-    <string name="ir_a_otra_actividad">Ir a otra actividad</string>
     <string name="title_activity_otra">OtraActivity</string>
     <string name="soy_la_actividad_llamada">Soy la actividad llamada</string>
+    <string name="animacion_de_salida">Animación de salida</string>
+    <string name="animacion_de_entrada">Animación de entrada</string>
+    <string name="ir_a_la_otra_actividad">Ir a la otra actividad</string>
 </resources>
