--- a/PR005-IntentsExplicitos/app/src/main/res/values/strings.xml
+++ b/PR005-IntentsExplicitos/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="aceptar">Aceptar</string>
     <string name="nombre_completo">(nombre completo)</string>
     <string name="edad_hint">(edad)</string>
+    <string name="datos">Nombre: %1$s\nEdad: %2$d</string>
     
 </resources>
